[package]
name = "aurelius"
version = "0.7.2"
authors = ["Andy Russell <arussell123@gmail.com>"]
documentation = "https://euclio.github.io/aurelius"
homepage = "https://github.com/euclio/aurelius"
keywords = ["markdown", "vim"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/euclio/aurelius"
description = "A complete solution for previewing markdown."
edition = "2021"
resolver = "2"

[dependencies]
base64 = "0.11.0"
buf_redux = "0.8.4"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
handlebars = "3.1.0"
httparse = "1.3.4"
include_dir = "0.5.0"
log = "0.4"
mime_guess = "2.0.1"
pulldown-cmark = { version = "0.7.2", default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
sha-1 = "0.8.1"
tungstenite = { version = "0.9.2", default-features = false }
url = { version = "2.1.0", features = ["serde"] }
tokio = { version = "1.14.0", features = ["rt", "macros"] }
hyper = { version = "0.14.15", features = ["server", "tcp", "http1"] }
async-tungstenite = { version = "0.17.1", features = ["tokio-runtime"] }
thiserror = "1.0.30"
tokio-util = { version = "0.6.9", features = ["compat"] }
futures-util = "0.3.18"
futures = "0.3.18"
anyhow = "1.0.56"

[dev-dependencies]
reqwest = { version = "0.11.7", default-features = false, features = ["blocking"] }
tempfile = "3.1.0"
matches = "0.1.8"
socket2 = "0.3.11"
tokio = { version = "1.14.0", features = ["rt", "macros", "net"] }
